--- a/BolTovnik/app/src/main/res/layout/content_main.xml
+++ b/BolTovnik/app/src/main/res/layout/content_main.xml
@@ -10,12 +10,23 @@
     <fragment
         android:id="@+id/nav_host_fragment_content_main"
         android:name="androidx.navigation.fragment.NavHostFragment"
-        android:layout_width="392dp"
-        android:layout_height="256dp"
+        android:layout_width="410dp"
+        android:layout_height="729dp"
         app:defaultNavHost="true"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.777"
         app:navGraph="@navigation/mobile_navigation" />
+
+    <ListView
+        android:layout_width="409dp"
+        android:layout_height="675dp"
+        app:layout_constraintBottom_toBottomOf="@+id/nav_host_fragment_content_main"
+        app:layout_constraintTop_toTopOf="@+id/nav_host_fragment_content_main"
+        app:layout_constraintVertical_bias="1.0"
+        tools:layout_editor_absoluteX="1dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
