--- a/BolTovnik/app/src/main/res/layout/nav_header_main.xml
+++ b/BolTovnik/app/src/main/res/layout/nav_header_main.xml
@@ -16,6 +16,7 @@
         android:id="@+id/imageView"
         android:layout_width="98dp"
         android:layout_height="85dp"
+        android:clickable="true"
         android:contentDescription="@string/nav_header_desc"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
         app:srcCompat="@mipmap/avatar_boy_man_child_person_people_icon_131284" />
