--- a/BolTovnik/app/src/main/res/menu/activity_main_drawer.xml
+++ b/BolTovnik/app/src/main/res/menu/activity_main_drawer.xml
@@ -5,6 +5,9 @@
 
     <group android:checkableBehavior="single">
         <item
+            android:icon="?android:attr/fingerprintAuthDrawable"
+            android:title="Account" />
+        <item
             android:id="@+id/nav_home"
             android:icon="@drawable/ic_menu_camera"
             android:title="@string/menu_home" />
